# wrustyssh

./: Cargo.toml  PKGBUILD  README.md  app.rc  build.rs  grustyssh.spec
data/: wrustyssh.desktop
src/: app.rs  config.rs  main.rs
src/keys/: generate.rs  storage.rs
src/models/: connection.rs
src/ssh/: handler.rs  known_hosts.rs  mod.rs  session.rs  sftp.rs  tunnel.rs
src/storage/: profiles.rs
src/ui/: connection_dialog.rs  connection_list.rs  dialogs.rs  mod.rs  sftp.rs  terminal.rs  window.rs  window.slint
wix/: main.wxs
