[package]
name = "grustyssh"
version = "1.9.0"
edition = "2021"
description = "A GTK4/libadwaita SSH client with tabbed terminals"

[dependencies]
# GUI
gtk4 = { version = "0.10", features = ["v4_14"] }
libadwaita = { version = "0.8", features = ["v1_6"] }
vte4 = "0.9"

# SSH
russh = "0.46"
russh-keys = "0.46"
russh-sftp = "2"
ssh-key = { version = "0.6", features = ["ed25519", "p256", "rsa", "crypto", "encryption", "std", "rand_core"] }

# Async
tokio = { version = "1", features = ["full"] }
async-channel = "2"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
directories = "6"
zeroize = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
rand = "0.8"
