[package]
name = "wrustyssh"
version = "3.2.0"
edition = "2021"
authors = ["Jeremiah Wenzel"]
description = "A Slint-based SSH client with tabbed terminals"

[package.metadata.wix]
eula = false

[dependencies]
# GUI
slint = "1"

# Terminal emulation
vt100 = "0.15"

# Font rendering for terminal
fontdue = "0.9"

# Native file dialogs
rfd = "0.15"

# Clipboard
arboard = "3"

# SSH
russh = "0.46"
russh-keys = "0.46"
russh-sftp = "2"
ssh-key = { version = "0.6", features = ["ed25519", "p256", "rsa", "crypto", "encryption", "std", "rand_core"] }

# Async
tokio = { version = "1", features = ["full"] }
async-channel = "2"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
directories = "6"
zeroize = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
rand = "0.8"

# Pin windows-sys to avoid dlltool requirement on GNU toolchain
windows-sys = "0.52"

[build-dependencies]
slint-build = "1"
embed-resource = "3"
